--- a/.github/workflows/react-project-build.yml
+++ b/.github/workflows/react-project-build.yml
@@ -1,4 +1,4 @@
-name: react-project-build-and-publish
+name: react-npm-push
 on:
   workflow_call:
     outputs:
@@ -84,81 +84,6 @@ jobs:
           else
             echo "Found existing .releaserc.json, using repository configuration"
           fi
-
-      - name: Create or update package.json
-        id: package_json
-        run: |
-          if [ ! -f "package.json" ]; then
-            echo "Creating new package.json..."
-            # Get the repository owner and name
-            OWNER=$(echo ${{ github.repository }} | cut -d'/' -f1)
-            NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
-            
-            # Create initial package.json
-            cat > package.json << EOF
-          {
-            "name": "@${OWNER}/${NAME}",
-            "version": "0.0.0-development",
-            "description": "Package for ${NAME}",
-            "main": "dist/index.js",
-            "types": "dist/index.d.ts",
-            "files": [
-              "dist"
-            ],
-            "scripts": {
-              "build": "tsc --declaration --emitDeclarationOnly && vite build",
-              "test": "echo \"Error: no test specified\" && exit 1"
-            },
-            "repository": {
-              "type": "git",
-              "url": "git+https://github.com/${OWNER}/${NAME}.git"
-            },
-            "keywords": [],
-            "author": "${OWNER}",
-            "license": "MIT",
-            "bugs": {
-              "url": "https://github.com/${OWNER}/${NAME}/issues"
-            },
-            "homepage": "https://github.com/${OWNER}/${NAME}#readme",
-            "publishConfig": {
-              "registry": "https://npm.pkg.github.com"
-            },
-            "dependencies": {},
-            "devDependencies": {
-              "typescript": "^5.0.0",
-              "vite": "^5.0.0",
-              "@types/node": "^20.0.0"
-            }
-          }
-          EOF
-            echo "Created new package.json"
-          else
-            echo "Updating existing package.json..."
-            # Get the repository owner and name
-            OWNER=$(echo ${{ github.repository }} | cut -d'/' -f1)
-            NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
-            
-            # Update essential fields in existing package.json
-            jq --arg name "@$OWNER/$NAME" \
-               --arg repo "${{ github.repository }}" \
-               --arg owner "$OWNER" \
-               '.name = $name | 
-                .repository.url = "git+https://github.com/" + $repo + ".git" |
-                .bugs.url = "https://github.com/" + $repo + "/issues" |
-                .homepage = "https://github.com/" + $repo + "#readme" |
-                .publishConfig.registry = "https://npm.pkg.github.com" |
-                .author = $owner' \
-               package.json > package.json.tmp && mv package.json.tmp package.json
-            
-            echo "Updated package.json"
-          fi
-
-      - name: Setup .npmrc for GitHub Packages
-        run: |
-          echo "@${GITHUB_REPOSITORY_OWNER}:registry=https://npm.pkg.github.com" >> .npmrc
-          echo "//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}" >> .npmrc
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
       - name: Get branch name
         id: get_branch
@@ -200,187 +125,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Update package version
-        run: |
-          # If this is a prerelease/feature branch, add the dist-tag
-          if [ "${{ steps.get_version.outputs.channel }}" != "" ]; then
-            DIST_TAG="${{ steps.get_version.outputs.channel }}"
-          else
-            DIST_TAG="latest"
-          fi
-          
-          # If we have a new version, update the version in package.json
-          if [ "${{ steps.get_version.outputs.newVersion }}" == "true" ]; then
-            npm version ${{ steps.get_version.outputs.version }} --no-git-tag-version
-          fi
-
-      - name: Install dependencies and types
-        run: |
-          # First install core dependencies
-          npm install --save-dev typescript@latest vite@latest @vitejs/plugin-react@latest
-          
-          # Install @types/node explicitly
-          npm install --save-dev @types/node
-          
-          # Display installed versions for debugging
-          echo "Installed versions:"
-          npm list typescript @types/node vite @vitejs/plugin-react
-
-      - name: Create tsconfig.json if not exists
-        run: |
-          echo "Creating/updating tsconfig.json..."
-          cat > tsconfig.json << EOF
-            {
-              "compilerOptions": {
-                "target": "ES2020",
-                "useDefineForClassFields": true,
-                "lib": ["ES2020", "DOM", "DOM.Iterable"],
-                "module": "ESNext",
-                "skipLibCheck": true,
-                "moduleResolution": "node",
-                "allowSyntheticDefaultImports": true,
-                "resolveJsonModule": true,
-                "isolatedModules": true,
-                "declaration": true,
-                "declarationDir": "./dist/types",
-                "jsx": "react-jsx",
-                "strict": true,
-                "noUnusedLocals": true,
-                "noUnusedParameters": true,
-                "noFallthroughCasesInSwitch": true,
-                "types": ["node"],
-                "paths": {
-                  "@/*": ["./src/*"]
-                }
-              },
-              "include": ["src"],
-              "references": [{ "path": "./tsconfig.node.json" }]
-            }
-            EOF
-              echo "Created tsconfig.json"
-            fi
-
-      - name: Create tsconfig.node.json if not exists
-        run: |
-          if [ ! -f "tsconfig.node.json" ]; then
-            echo "Creating tsconfig.node.json..."
-            cat > tsconfig.node.json << EOF
-          {
-            "compilerOptions": {
-              "composite": true,
-              "skipLibCheck": true,
-              "module": "ESNext",
-              "moduleResolution": "bundler",
-              "allowSyntheticDefaultImports": true,
-              "strict": true
-            },
-            "include": ["vite.config.ts"]
-          }
-          EOF
-            echo "Created tsconfig.node.json"
-          fi
-
-      - name: Create vite.config.ts if not exists
-        run: |
-          if [ ! -f "vite.config.ts" ]; then
-            echo "Creating vite.config.ts..."
-            cat > vite.config.ts << EOF
-          import { defineConfig } from 'vite'
-          import react from '@vitejs/plugin-react'
-          import path from 'path'
-
-          export default defineConfig({
-            plugins: [react()],
-            resolve: {
-              alias: {
-                '@': path.resolve(__dirname, './src'),
-              },
-            },
-            build: {
-              outDir: 'dist',
-              lib: {
-                entry: path.resolve(__dirname, 'src/index.ts'),
-                name: '${NAME}',
-                formats: ['es', 'umd'],
-                fileName: (format) => \`${NAME}.\${format}.js\`
-              },
-              rollupOptions: {
-                external: ['react', 'react-dom'],
-                output: {
-                  globals: {
-                    react: 'React',
-                    'react-dom': 'ReactDOM',
-                  },
-                },
-              },
-            },
-          })
-          EOF
-            echo "Created vite.config.ts"
-          fi
-
-      - name: Create src directory and index file if not exists
-        run: |
-          mkdir -p src
-          if [ ! -f "src/index.ts" ]; then
-            echo "Creating default src/index.ts..."
-            cat > src/index.ts << EOF
-          // Default export
-          export default {
-            name: '${NAME}',
-            version: process.env.npm_package_version
-          };
-          EOF
-            echo "Created src/index.ts"
-          fi
-
-      - name: Install project dependencies
-        run: |
-          # Remove package-lock.json if it exists to force a clean install
-          rm -f package-lock.json
-          
-          # Clean install
-          npm install
-          
-          # Verify @types/node is installed
-          if ! npm list @types/node; then
-            echo "Installing @types/node separately..."
-            npm install --save-dev @types/node
-          fi
-          
-          # Display installed versions for debugging
-          echo "Final dependency versions:"
-          npm list typescript @types/node vite @vitejs/plugin-react
+      - name: Install dependencies
+        run: npm ci
         
-      - name: Build with type checking
-        run: |
-          echo "TypeScript version:"
-          ./node_modules/.bin/tsc --version
-          
-          echo "Node types installation status:"
-          ls -la node_modules/@types/node || echo "@types/node not found"
-          
-          echo "Contents of tsconfig.json:"
-          cat tsconfig.json
-          
-          echo "Running build..."
-          npm run build || {
-            echo "Build failed. Displaying TypeScript errors with full logging:"
-            npm run build --loglevel verbose
-            exit 1
-          }
-
-      - name: Publish to GitHub Packages
-        if: steps.get_version.outputs.newVersion == 'true'
-        run: |
-          if [ "${{ steps.get_version.outputs.channel }}" != "" ]; then
-            npm publish --tag ${{ steps.get_version.outputs.channel }}
-          else
-            npm publish
-          fi
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build
+        run: npm run build  # Adjust this to your actual build command
 
       - name: Set artifact name
         id: set_names
@@ -396,7 +145,7 @@ jobs:
 
       - name: Create Zip File
         run: |
-          zip -r "${{ steps.set_names.outputs.zip_name }}" dist/
+          zip -r "${{ steps.set_names.outputs.zip_name }}" dist/  # Adjust 'dist' to your build output directory
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
@@ -444,3 +193,175 @@ jobs:
           echo "Channel: ${{ steps.get_version.outputs.channel }}" >> $GITHUB_STEP_SUMMARY
           echo "Type: ${{ steps.get_version.outputs.type }}" >> $GITHUB_STEP_SUMMARY
           echo "Short SHA: ${{ steps.get_version.outputs.hash }}" >> $GITHUB_STEP_SUMMARY
+
+
+    
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ steps.get_version.outputs.tag }}
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@${{ github.repository_owner }}'
+          cache: npm
+
+      # Create default package.json if it doesn't exist
+      - name: Create default package.json if missing
+        run: |
+          if [ ! -f "package.json" ]; then
+            echo "No package.json found, creating default configuration..."
+            cat > package.json << EOF
+          {
+            "name": "${{ github.event.repository.name }}",
+            "version": "${{ steps.get_version.outputs.newVersion || '0.0.0' }}",
+            "description": "Package for ${{ github.repository }}",
+            "main": "dist/index.js",
+            "types": "dist/index.d.ts",
+            "files": [
+              "dist",
+              "README.md"
+            ],
+            "scripts": {
+              "build": "tsc",
+              "test": "echo \"Error: no test specified\" && exit 1"
+            },
+            "repository": {
+              "type": "git",
+              "url": "git+https://github.com/${{ github.repository }}.git"
+            },
+            "keywords": [],
+            "author": "${{ github.repository_owner }}",
+            "license": "MIT",
+            "bugs": {
+              "url": "https://github.com/${{ github.repository }}/issues"
+            },
+            "homepage": "https://github.com/${{ github.repository }}#readme",
+            "publishConfig": {
+              "registry": "https://npm.pkg.github.com"
+            },
+            "peerDependencies": {
+              "react": "^18.0.0",
+              "react-dom": "^18.0.0"
+            },
+            "devDependencies": {
+              "@types/react": "^18.0.0",
+              "@types/react-dom": "^18.0.0",
+              "typescript": "^5.0.0"
+            }
+          }
+          EOF
+            echo "Created default package.json"
+
+            # Create a basic tsconfig.json if it doesn't exist
+            if [ ! -f "tsconfig.json" ]; then
+              echo "Creating default tsconfig.json..."
+              cat > tsconfig.json << EOF
+          {
+            "compilerOptions": {
+              "target": "es5",
+              "module": "commonjs",
+              "declaration": true,
+              "outDir": "./dist",
+              "strict": true,
+              "esModuleInterop": true,
+              "skipLibCheck": true,
+              "forceConsistentCasingInFileNames": true,
+              "jsx": "react"
+            },
+            "include": ["src"],
+            "exclude": ["node_modules", "dist"]
+          }
+          EOF
+            fi
+
+            # Create src directory and index file if they don't exist
+            if [ ! -d "src" ]; then
+              mkdir src
+              echo 'export { default } from "./components";' > src/index.ts
+              mkdir src/components
+              
+              # Create a sample component
+              cat > src/components/index.tsx << EOF
+          import React from 'react';
+
+          interface Props {
+            text?: string;
+          }
+
+          const Component: React.FC<Props> = ({ text = 'Hello from ${{ github.event.repository.name }}!' }) => {
+            return (
+              <div>
+                {text}
+              </div>
+            );
+          };
+
+          export default Component;
+          EOF
+            fi
+          else
+            echo "Found existing package.json, using repository configuration"
+          fi
+
+      # Download the build artifact - FIXED VERSION
+      - name: Set download artifact name
+        id: download_names
+        run: |
+          REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
+          if [ "${{ steps.get_version.outputs.newVersion }}" == "true" ]; then
+            VERSION="${{ steps.get_version.outputs.version }}"
+          else
+            VERSION="${{ github.ref_name }}"
+          fi
+          echo "artifact_name=${REPO_NAME}-${VERSION}" >> $GITHUB_OUTPUT
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ steps.download_names.outputs.artifact_name }}
+          path: ./downloaded-artifact
+
+      # Extract the zip file
+      - name: Extract build artifact
+        run: |
+          unzip ./downloaded-artifact/*.zip -d ./
+          rm -rf ./downloaded-artifact
+
+      # Update package.json with the new version - FIXED VERSION
+      - name: Update package version
+        if: steps.get_version.outputs.newVersion == 'true'
+        run: npm version ${{ steps.get_version.outputs.version }} --no-git-tag-version
+
+      # Update the package name to include the organization scope
+      - name: Update package name
+        run: |
+          contents="$(jq '.name = "@${{ github.repository_owner }}/${{ github.event.repository.name }}"' package.json)"
+          echo "${contents}" > package.json
+
+      # Add the GitHub registry configuration
+      - name: Configure npm registry
+        run: |
+          echo "@${{ github.repository_owner }}:registry=https://npm.pkg.github.com" > .npmrc
+          echo "//npm.pkg.github.com/:_authToken=\${NODE_AUTH_TOKEN}" >> .npmrc
+
+      # Publish the package
+      - name: Publish package
+        run: |
+          if [ "${{ steps.get_version.outputs.channel }}" != "" ]; then
+            npm publish --tag ${{ steps.get_version.outputs.channel }}
+          else
+            npm publish
+          fi
+        env:
+          NODE_AUTH_TOKEN: ${{ github.token }}
+
+      - name: Print summary
+        run: |
+          echo "# NPM Package Published" >> $GITHUB_STEP_SUMMARY
+          echo "Version: ${{ steps.get_version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "Tag: ${{ steps.get_version.outputs.tag }}" >> $GITHUB_STEP_SUMMARY
+          echo "Channel: ${{ steps.get_version.outputs.channel || 'latest' }}" >> $GITHUB_STEP_SUMMARY
+          echo "Package: @${{ github.repository_owner }}/${{ github.event.repository.name }}" >> $GITHUB_STEP_SUMMARY
